# aelus-aether

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AAET-83-SCOPE-CLARIFICATION.md  AAET-84-FINAL-STATUS.md  AAET-84-PROGRESS.md  AAET-84-REVIEW-RESPONSE.md  AAET-84-SCOPE-ANALYSIS.md  AAET-85-FINAL-SUMMARY.md  AAET-85-IMPLEMENTATION-NOTES.md  AAET-85-PHASE-3-STATUS.md  AAET-85-SCOPE-ANALYSIS.md  AAET-85-SCOPE.md  AAET-86-FIXES.md  AAET-86-PART2-COMPLETE.md  AAET-86-PROGRESS.md  AAET-86-SCOPE.md  AAET-87-COMPLETE.md  AAET-87-FIXES.md  AAET-9-COMPLETE.md  CONTRIBUTING.md  GIT_WORKFLOW.md  JIRA-PRIORITY-LIST.md  Makefile  PHASE1_COMPLETE.md  PR_REVIEW_RESPONSE.md  README.md  SETUP.md  Stories-with-priorities.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  test_db_connection.py  test_psycopg2.py
.github/workflows/: test.yml
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  admin.py  ingestion.py  repositories.py  retrieval.py  tenants.py
app/core/: __init__.py  auth.py  database.py  health.py  logging.py  metrics.py  redis.py  redis_config.py
app/middleware/: __init__.py  auth.py  quota.py  request_id.py
app/models/: __init__.py  code_graph.py  repository.py  tenant.py
app/schemas/: ingestion.py  namespace.py  repository.py  retrieval.py  tenant.py
app/utils/: __init__.py  cache.py  exceptions.py  jwt.py  namespace.py  quota.py  rate_limit.py  security.py  tenant_context.py  validation.py
docs/: api.md  architecture.md  authentication.md  development.md
libs/: __init__.py
libs/code_graph_rag/: README.md  __init__.py  config.py  graph_builder.py  language_config.py  parser_loader.py  schemas.py
libs/code_graph_rag/parsers/: call_processor.py  cpp_utils.py  definition_processor.py  factory.py  import_processor.py  java_type_inference.py  java_utils.py  js_type_inference.py  js_utils.py  lua_type_inference.py  lua_utils.py  rust_utils.py  structure_processor.py  type_inference.py  utils.py
libs/code_graph_rag/services/: __init__.py  graph_service.py
libs/code_graph_rag/storage/: __init__.py  config.py  interface.py  postgres_store.py  sync_wrapper.py
libs/code_graph_rag/storage/migrations/: 001_create_graph_tables.sql  002_create_embeddings_table.sql
migrations/: README  env.py
migrations/versions/: 001_initial_schema.py  5f97db649d98_tenant_schema_complete.py  a3a9c19a1c85_enable_rls_tenant_isolation.py  aaet29_soft_delete_tenants.py  admin_bypass_rls.py  b1c2d3e4f5g6_fix_rls_force_enable.py  fix_rls_force_enable.py
scripts/: init-db.sql  reset_test_db.py
services/: __init__.py
services/ingestion/: __init__.py  embedding_service.py  parser_service.py
tests/: __init__.py  conftest.py  factories.py  test_api.py  test_fixtures_example.py  test_logging.py  test_migrations.py  test_postgres_security.py  test_request_id_middleware.py  test_storage_interface.py  test_tenant_context.py  test_tenant_schemas.py
tests/integration/: test_admin_tenant_management.py  test_admin_tenant_onboarding.py  test_jwt_middleware.py  test_quota_endpoints.py  test_quota_middleware.py  test_rls_tenant_isolation.py  test_tenant_crud.py  test_usage_metrics.py
tests/services/: test_parser_service.py
tests/unit/: test_auth_dependencies.py  test_jwt.py  test_namespace.py  test_quota_service.py  test_security.py  test_validation.py
tests/workers/: test_ingestion_tasks.py
workers/: README.md  __init__.py  celery_app.py
workers/tasks/: __init__.py  ingestion.py  quota.py
